Modernize ThreePhaseCommitCohortProxyTest
Use List.of(), assertEquals() and mockito runner.

Change-Id: Ide20b467ddc7128680f3f29668f4e978a978696e
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>